--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,9 +1,9 @@
 development:
   adapter: mysql
-  database: agoraTest_development
+  database: sfa_development
   encoding: utf8
-  username: root
-  password: dvous1010
+  username: 
+  password: 
   pool: 5
   timeout: 5000
 
@@ -12,19 +12,19 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
-  database: agoraTest_test
+  database: sfa_test
   encoding: utf8
-  username: root
-  password: dvous1010
+  username: 
+  password: 
   pool: 5
   timeout: 5000
 
 production:
   adapter: mysql
-  database: agoraTest_production
+  database: sfa_production
   encoding: utf8
-  username: root
-  password: dvous1010
+  username: 
+  password: 
   pool: 5
   timeout: 5000
 
