--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,6 +1,6 @@
 development:
   adapter: mysql
-  database: sfa_development
+  database: agoraTest_development
   encoding: utf8
   username: 
   password: 
@@ -12,7 +12,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
-  database: sfa_test
+  database: agoraTest_test
   encoding: utf8
   username: 
   password: 
@@ -21,7 +21,7 @@ test:
 
 production:
   adapter: mysql
-  database: sfa_production
+  database: agoraTest_production
   encoding: utf8
   username: 
   password: 
